--- a/RestaurantsByPostcode/RestaurantsByPostcode/Scenes/RestaurantsListing/UIElements/RestaurantsTableViewCell.xib
+++ b/RestaurantsByPostcode/RestaurantsByPostcode/Scenes/RestaurantsListing/UIElements/RestaurantsTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="RestaurantsTableViewCell" customModule="RestaurantsByPostcode" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RestaurantCell" rowHeight="105" id="KGk-i7-Jjw" customClass="RestaurantsTableViewCell" customModule="RestaurantsByPostcode" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -75,10 +75,10 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="RestaurantCuisineLabel" destination="fUl-2m-f9X" id="UPA-nZ-7I8"/>
-                <outlet property="RestaurantLogoImageView" destination="WJE-hR-Lkh" id="2uE-CP-fh7"/>
-                <outlet property="RestaurantRatingLabel" destination="5q9-Ri-6lm" id="Bke-Bn-QNn"/>
-                <outlet property="RestaurantTitleLabel" destination="Pjl-S8-Dta" id="8in-WV-ITo"/>
+                <outlet property="restaurantCuisineLabel" destination="fUl-2m-f9X" id="UPA-nZ-7I8"/>
+                <outlet property="restaurantLogoImageView" destination="WJE-hR-Lkh" id="2uE-CP-fh7"/>
+                <outlet property="restaurantRatingLabel" destination="5q9-Ri-6lm" id="Bke-Bn-QNn"/>
+                <outlet property="restaurantTitleLabel" destination="Pjl-S8-Dta" id="8in-WV-ITo"/>
             </connections>
             <point key="canvasLocation" x="163.768115942029" y="170.42410714285714"/>
         </tableViewCell>
